--- a/index.html
+++ b/index.html
@@ -2,22 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <title>Vertical Label</title>
   <style>
-    body { margin: 0; }
-    .box {
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+
+    .container {
+      height: 100%;
+      width: 100%;
+      background-color: #ddede7;
+      border: 2px solid #63c08f;
+      box-sizing: border-box;
+      display: flex;
+      align-items: flex-end;   /* bottom alignment */
+      justify-content: center; /* horizontal centering */
+    }
+
+    .text {
       writing-mode: vertical-rl;
       transform: rotate(180deg);
       font-family: "Avenir Next","Avenir",Helvetica,Arial,sans-serif;
       font-size: 30px;
-      background: #ddede7;
-      border: 2px solid #63c08f;
+      color: #2764ae;
       padding: 16px 12px;
       white-space: nowrap;
-      display: inline-block;
     }
   </style>
 </head>
 <body>
-  <div class="box"><strong>Introduction</strong> — Embracing Nexus Thinking</div>
+  <div class="container">
+    <div class="text">
+      <strong>Introduction</strong> — Embracing Nexus Thinking
+    </div>
+  </div>
 </body>
 </html>
