--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       height: 100%;
       width: 100%;
       background-color: #ddede7;
-      border: 2px solid #63c08f;
+      /*border: 2px solid #63c08f;*/
       box-sizing: border-box;
       display: flex;
       align-items: flex-end;   /* bottom align */
@@ -31,7 +31,7 @@
     }
 
     .icon {
-      width: 36px;   /* adjust as needed */
+      width: 50px;   /* adjust as needed */
       height: auto;
     }
 
